# pokemon-battle-sim

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-02-pokemon-battle-sim.md  2026-04-23-terminal-ui-redesign.md
docs/superpowers/specs/: 2026-04-02-pokemon-battle-sim-design.md  2026-04-23-terminal-ui-redesign-design.md
src/ai/: lookahead.py  memory.py  opponent_model.py  personality.py  scorer.py
src/cli/: app.py  display.py  team_builder.py
src/data/: champion_loader.py  pokeapi_client.py
src/engine/: battle.py  damage.py  moves.py  pokemon.py  typechart.py
src/pokemon_battle_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_integration.py
tests/ai/: test_lookahead.py  test_memory.py  test_opponent_model.py  test_personality.py  test_scorer.py
tests/cli/: test_display.py
tests/data/: test_champion_loader.py  test_pokeapi_client.py
tests/engine/: test_battle.py  test_damage.py  test_effects.py  test_moves.py  test_pokemon.py  test_typechart.py
