[project]
name = "pokemon-battle-sim"
version = "0.1.0"
description = "Pokemon battle simulator with improved AI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
pokebattle = "src.cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
